--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>NoRedInk Frontend Test</title>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8" />
   </head>
   <body>
